@@ -3,27 +3,41 @@ package com.onthegomap.planetiler;
 import static com.onthegomap.planetiler.TestUtils.*;
 import static org.junit.jupiter.api.Assertions.*;
 
+import com.fasterxml.jackson.dataformat.csv.CsvMapper;
+import com.fasterxml.jackson.dataformat.csv.CsvSchema;
+import com.onthegomap.planetiler.archive.ReadableTileArchive;
+import com.onthegomap.planetiler.archive.TileArchiveConfig;
+import com.onthegomap.planetiler.archive.TileArchiveMetadata;
+import com.onthegomap.planetiler.archive.TileArchiveWriter;
+import com.onthegomap.planetiler.archive.TileCompression;
 import com.onthegomap.planetiler.collection.FeatureGroup;
 import com.onthegomap.planetiler.collection.LongLongMap;
 import com.onthegomap.planetiler.collection.LongLongMultimap;
 import com.onthegomap.planetiler.config.Arguments;
-import com.onthegomap.planetiler.config.MbtilesMetadata;
 import com.onthegomap.planetiler.config.PlanetilerConfig;
+import com.onthegomap.planetiler.files.ReadableFilesArchive;
 import com.onthegomap.planetiler.geo.GeoUtils;
 import com.onthegomap.planetiler.geo.GeometryException;
+import com.onthegomap.planetiler.geo.SimplifyMethod;
 import com.onthegomap.planetiler.geo.TileCoord;
+import com.onthegomap.planetiler.geo.TileOrder;
 import com.onthegomap.planetiler.mbtiles.Mbtiles;
-import com.onthegomap.planetiler.mbtiles.MbtilesWriter;
+import com.onthegomap.planetiler.pmtiles.ReadablePmtiles;
 import com.onthegomap.planetiler.reader.SimpleFeature;
 import com.onthegomap.planetiler.reader.SimpleReader;
 import com.onthegomap.planetiler.reader.SourceFeature;
+import com.onthegomap.planetiler.reader.SourceFeatureProcessor;
 import com.onthegomap.planetiler.reader.osm.OsmBlockSource;
 import com.onthegomap.planetiler.reader.osm.OsmElement;
 import com.onthegomap.planetiler.reader.osm.OsmReader;
 import com.onthegomap.planetiler.reader.osm.OsmRelationInfo;
 import com.onthegomap.planetiler.stats.Stats;
-import com.onthegomap.planetiler.worker.WorkerPipeline;
+import com.onthegomap.planetiler.stream.InMemoryStreamArchive;
+import com.onthegomap.planetiler.util.BuildInfo;
+import com.onthegomap.planetiler.util.Gzip;
+import com.onthegomap.planetiler.util.TileSizeStats;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -32,6 +46,7 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.concurrent.CopyOnWriteArrayList;
@@ -39,6 +54,7 @@ import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.stream.DoubleStream;
+import java.util.stream.Stream;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -47,6 +63,7 @@ import org.junit.jupiter.params.provider.ValueSource;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.MultiPolygon;
+import org.locationtech.jts.geom.Point;
 import org.locationtech.jts.geom.Polygon;
 import org.locationtech.jts.io.InputStreamInStream;
 import org.locationtech.jts.io.WKBReader;
@@ -56,6 +73,7 @@ import org.slf4j.LoggerFactory;
 /**
  * In-memory tests with fake data and profiles to ensure all features work end-to-end.
  */
+@Slow
 class PlanetilerTests {
 
   private static final Logger LOGGER = LoggerFactory.getLogger(PlanetilerTests.class);
@@ -71,6 +89,9 @@ class PlanetilerTests {
   private static final int Z13_TILES = 1 << 13;
   private static final double Z13_WIDTH = 1d / Z13_TILES;
   private static final int Z12_TILES = 1 << 12;
+  private static final double Z12_WIDTH = 1d / Z12_TILES;
+  private static final int Z11_TILES = 1 << 11;
+  private static final double Z11_WIDTH = 1d / Z11_TILES;
   private static final int Z4_TILES = 1 << 4;
   private static final Polygon WORLD_POLYGON = newPolygon(
     worldCoordinateList(
@@ -92,23 +113,25 @@ class PlanetilerTests {
     return elem;
   }
 
-  private void processReaderFeatures(FeatureGroup featureGroup, Profile profile, PlanetilerConfig config,
-    List<? extends SourceFeature> features) {
-    new SimpleReader(profile, stats, "test") {
+  private <F extends SourceFeature> void processReaderFeatures(FeatureGroup featureGroup, Profile profile,
+    PlanetilerConfig config, List<F> features) {
+    SourceFeatureProcessor.processFiles(
+      "test",
+      List.of(Path.of("mock-path")), path -> new SimpleReader<F>("test") {
+        @Override
+        public long getFeatureCount() {
+          return features.size();
+        }
 
-      @Override
-      public long getCount() {
-        return features.size();
-      }
+        @Override
+        public void readFeatures(Consumer<F> next) {
+          features.forEach(next);
+        }
 
-      @Override
-      public WorkerPipeline.SourceStep<SourceFeature> read() {
-        return features::forEach;
-      }
-
-      @Override
-      public void close() {}
-    }.process(featureGroup, config);
+        @Override
+        public void close() { /* pass */ }
+      }, featureGroup, config, profile, stats
+    );
   }
 
   private void processOsmFeatures(FeatureGroup featureGroup, Profile profile, PlanetilerConfig config,
@@ -134,16 +157,16 @@ class PlanetilerTests {
     Profile profile
   ) throws Exception {
     PlanetilerConfig config = PlanetilerConfig.from(Arguments.of(args));
-    FeatureGroup featureGroup = FeatureGroup.newInMemoryFeatureGroup(profile, stats);
+    FeatureGroup featureGroup = FeatureGroup.newInMemoryFeatureGroup(TileOrder.TMS, profile, config, stats);
     runner.run(featureGroup, profile, config);
     featureGroup.prepare();
-    try (Mbtiles db = Mbtiles.newInMemoryDatabase(config.compactDb())) {
-      MbtilesWriter.writeOutput(featureGroup, db, () -> 0L, new MbtilesMetadata(profile, config.arguments()), config,
-        stats);
+    try (Mbtiles db = Mbtiles.newInMemoryDatabase(config.arguments())) {
+      TileArchiveWriter.writeOutput(featureGroup, db, () -> 0L, new TileArchiveMetadata(profile, config),
+        null, config, stats);
       var tileMap = TestUtils.getTileMap(db);
       tileMap.values().forEach(fs -> fs.forEach(f -> f.geometry().validate()));
-      int tileDataCount = config.compactDb() ? TestUtils.getTilesDataCount(db) : 0;
-      return new PlanetilerResults(tileMap, db.metadata().getAll(), tileDataCount);
+      int tileDataCount = db.compactDb() ? TestUtils.getTilesDataCount(db) : 0;
+      return new PlanetilerResults(tileMap, db.metadata().toMap(), tileDataCount);
     }
   }
 
@@ -184,17 +207,6 @@ class PlanetilerTests {
     );
   }
 
-  private PlanetilerResults runWithOsmElements(
-    Map<String, String> args,
-    List<OsmElement> features,
-    BiConsumer<SourceFeature, FeatureCollector> profileFunction
-  ) throws Exception {
-    return run(
-      args,
-      (featureGroup, profile, config) -> processOsmFeatures(featureGroup, profile, config, features),
-      TestProfile.processSourceFeatures(profileFunction)
-    );
-  }
 
   private PlanetilerResults runWithOsmElements(
     Map<String, String> args,
@@ -243,17 +255,15 @@ class PlanetilerTests {
       "format", "pbf",
       "minzoom", "0",
       "maxzoom", "14",
-      "center", "0,0,0",
+      "center", "0,0",
       "bounds", "-180,-85.05113,180,85.05113"
     ), results.metadata);
+    assertSubmap(Map.of(
+      "planetiler:version", BuildInfo.get().version()
+    ), results.metadata);
     assertSameJson(
-      """
-        {
-          "vector_layers": [
-          ]
-        }
-        """,
-      results.metadata.get("json")
+      "[]",
+      results.metadata.get("vector_layers")
     );
   }
 
@@ -261,11 +271,11 @@ class PlanetilerTests {
   void testOverrideMetadata() throws Exception {
     var results = runWithReaderFeatures(
       Map.of(
-        "mbtiles_name", "mbtiles_name",
-        "mbtiles_description", "mbtiles_description",
-        "mbtiles_attribution", "mbtiles_attribution",
-        "mbtiles_version", "mbtiles_version",
-        "mbtiles_type", "mbtiles_type"
+        "archive_name", "override_name",
+        "archive_description", "override_description",
+        "archive_attribution", "override_attribution",
+        "archive_version", "override_version",
+        "archive_type", "override_type"
       ),
       List.of(),
       (sourceFeature, features) -> {
@@ -273,16 +283,17 @@ class PlanetilerTests {
     );
     assertEquals(Map.of(), results.tiles);
     assertSubmap(Map.of(
-      "name", "mbtiles_name",
-      "description", "mbtiles_description",
-      "attribution", "mbtiles_attribution",
-      "version", "mbtiles_version",
-      "type", "mbtiles_type"
+      "name", "override_name",
+      "description", "override_description",
+      "attribution", "override_attribution",
+      "version", "override_version",
+      "type", "override_type"
     ), results.metadata);
   }
 
-  @Test
-  void testSinglePoint() throws Exception {
+  @ParameterizedTest
+  @ValueSource(booleans = {false, true})
+  void testSinglePoint(boolean anyGeom) throws Exception {
     double x = 0.5 + Z14_WIDTH / 4;
     double y = 0.5 + Z14_WIDTH / 4;
     double lat = GeoUtils.getWorldLat(y);
@@ -295,7 +306,7 @@ class PlanetilerTests {
           "attr", "value"
         ))
       ),
-      (in, features) -> features.point("layer")
+      (in, features) -> (anyGeom ? features.anyGeometry("layer") : features.point("layer"))
         .setZoomRange(13, 15)
         .setAttr("name", "name value")
         .inheritAttrFromSource("attr")
@@ -323,13 +334,11 @@ class PlanetilerTests {
     ), results.tiles);
     assertSameJson(
       """
-        {
-          "vector_layers": [
-            {"id": "layer", "fields": {"name": "String", "attr": "String"}, "minzoom": 13, "maxzoom": 15}
-          ]
-        }
+        [
+          {"id": "layer", "fields": {"name": "String", "attr": "String"}, "minzoom": 13, "maxzoom": 15}
+        ]
         """,
-      results.metadata.get("json")
+      results.metadata.get("vector_layers")
     );
   }
 
@@ -421,8 +430,133 @@ class PlanetilerTests {
     ), results.tiles);
   }
 
+
   @Test
-  void testLineString() throws Exception {
+  void testMinSize() throws Exception {
+    double x = 0.5 + Z14_WIDTH / 4;
+    double y = 0.5 + Z14_WIDTH / 4;
+    double lat = GeoUtils.getWorldLat(y);
+    double lng = GeoUtils.getWorldLon(x);
+    double delta = 5e-5;
+
+    var results = runWithReaderFeatures(
+      Map.of("threads", "1", "maxzoom", "15"),
+      List.of(
+        newReaderFeature(newPoint(lng, lat), Map.of(
+          "type", "point"
+        )),
+        newReaderFeature(rectangle(lng - delta, lat - delta, lng + delta, lat + delta), Map.of(
+          "type", "poly"
+        )),
+        newReaderFeature(newLineString(lng - delta, lat, lng + delta, lat), Map.of(
+          "type", "line"
+        ))
+      ),
+      (in, features) -> features.centroid("layer")
+        .setZoomRange(13, 15)
+        .setMinPixelSizeAtAllZooms(1)
+        .inheritAttrFromSource("type")
+    );
+
+    assertEquals(Map.of(
+      TileCoord.ofXYZ(Z15_TILES / 2, Z15_TILES / 2, 15), List.of(
+        feature(newPoint(128, 128), Map.of("type", "line")),
+        feature(newPoint(128, 128), Map.of("type", "poly"))
+      // omit point when min size is set
+      ),
+      TileCoord.ofXYZ(Z14_TILES / 2, Z14_TILES / 2, 14), List.of(
+        feature(newPoint(64, 64), Map.of("type", "line")),
+        feature(newPoint(64, 64), Map.of("type", "poly"))
+      ) // features are too small at z13
+    ), results.tiles);
+  }
+
+  @ParameterizedTest
+  @CsvSource({
+    "false,RETAIN_IMPORTANT_POINTS",
+    "false,RETAIN_EFFECTIVE_AREAS",
+    "false,RETAIN_WEIGHTED_EFFECTIVE_AREAS",
+    "true,RETAIN_IMPORTANT_POINTS",
+  })
+  void testLineString(boolean anyGeom, SimplifyMethod simplifyStrategy) throws Exception {
+    double x1 = 0.5 + Z14_WIDTH / 2;
+    double y1 = 0.5 + Z14_WIDTH / 2;
+    double x2 = x1 + Z14_WIDTH;
+    double y2 = y1 + Z14_WIDTH;
+    double ymid = (y1 + y2) / 2;
+    double xmid = (x1 + x2) / 2;
+    double lat1 = GeoUtils.getWorldLat(y1);
+    double lng1 = GeoUtils.getWorldLon(x1);
+    double latMid = GeoUtils.getWorldLat(ymid);
+    double lngMid = GeoUtils.getWorldLon(xmid);
+    double lat2 = GeoUtils.getWorldLat(y2);
+    double lng2 = GeoUtils.getWorldLon(x2);
+
+    var results = runWithReaderFeatures(
+      Map.of("threads", "1"),
+      List.of(
+        newReaderFeature(newLineString(lng1, lat1, lngMid, latMid, lng2, lat2), Map.of(
+          "attr", "value"
+        ))
+      ),
+      (in, features) -> (anyGeom ? features.anyGeometry("layer") : features.line("layer"))
+        .setZoomRange(13, 14)
+        .setPixelTolerance(1)
+        .setSimplifyMethod(simplifyStrategy)
+        .setBufferPixels(4)
+    );
+
+    assertSubmap(Map.of(
+      TileCoord.ofXYZ(Z14_TILES / 2, Z14_TILES / 2, 14), List.of(
+        feature(newLineString(128, 128, 260, 260), Map.of())
+      ),
+      TileCoord.ofXYZ(Z14_TILES / 2 + 1, Z14_TILES / 2 + 1, 14), List.of(
+        feature(newLineString(-4, -4, 128, 128), Map.of())
+      ),
+      TileCoord.ofXYZ(Z13_TILES / 2, Z13_TILES / 2, 13), List.of(
+        feature(newLineString(64, 64, 192, 192), Map.of())
+      )
+    ), results.tiles);
+  }
+
+  @Test
+  void testPartialLine() throws Exception {
+    double x1 = 0.5 + Z14_WIDTH / 2;
+    double y1 = 0.5 + Z14_WIDTH / 2;
+    double x2 = x1 + Z14_WIDTH;
+    double y2 = y1 + Z14_WIDTH;
+    double lat1 = GeoUtils.getWorldLat(y1);
+    double lng1 = GeoUtils.getWorldLon(x1);
+    double lat2 = GeoUtils.getWorldLat(y2);
+    double lng2 = GeoUtils.getWorldLon(x2);
+
+    var results = runWithReaderFeatures(
+      Map.of("threads", "1"),
+      List.of(
+        newReaderFeature(newLineString(lng1, lat1, lng2, lat2), Map.of(
+          "attr", "value"
+        ))
+      ),
+      (in, features) -> features.partialLine("layer", 0, 0.5)
+        .setZoomRange(13, 14)
+        .setBufferPixels(4)
+    );
+
+    assertSubmap(Map.of(
+      TileCoord.ofXYZ(Z14_TILES / 2, Z14_TILES / 2, 14), List.of(
+        feature(newLineString(128, 128, 256, 256), Map.of())
+      ),
+      TileCoord.ofXYZ(Z14_TILES / 2 + 1, Z14_TILES / 2 + 1, 14), List.of(
+        feature(newLineString(-4, -4, 0, 0), Map.of())
+      ),
+      TileCoord.ofXYZ(Z13_TILES / 2, Z13_TILES / 2, 13), List.of(
+        feature(newLineString(64, 64, 128, 128), Map.of())
+      )
+    ), results.tiles);
+  }
+
+  @Test
+  void testLineWithPartialAttr() throws Exception {
     double x1 = 0.5 + Z14_WIDTH / 2;
     double y1 = 0.5 + Z14_WIDTH / 2;
     double x2 = x1 + Z14_WIDTH;
@@ -440,13 +574,16 @@ class PlanetilerTests {
         ))
       ),
       (in, features) -> features.line("layer")
+        .linearRange(0, 0.25).setAttrWithMinzoom("k", "v", 14)
+        .entireLine()
         .setZoomRange(13, 14)
         .setBufferPixels(4)
     );
 
     assertSubmap(Map.of(
       TileCoord.ofXYZ(Z14_TILES / 2, Z14_TILES / 2, 14), List.of(
-        feature(newLineString(128, 128, 260, 260), Map.of())
+        feature(newLineString(192, 192, 260, 260), Map.of()),
+        feature(newLineString(128, 128, 192, 192), Map.of("k", "v"))
       ),
       TileCoord.ofXYZ(Z14_TILES / 2 + 1, Z14_TILES / 2 + 1, 14), List.of(
         feature(newLineString(-4, -4, 128, 128), Map.of())
@@ -455,6 +592,33 @@ class PlanetilerTests {
         feature(newLineString(64, 64, 192, 192), Map.of())
       )
     ), results.tiles);
+  }
+
+  @Test
+  void testLineStringDegenerateWhenUnscaled() throws Exception {
+    double x1 = 0.5 + Z12_WIDTH / 2;
+    double y1 = 0.5 + Z12_WIDTH / 2;
+    double x2 = x1 + Z12_WIDTH / 4096 / 3;
+    double y2 = y1 + Z12_WIDTH / 4096 / 3;
+    double lat1 = GeoUtils.getWorldLat(y1);
+    double lng1 = GeoUtils.getWorldLon(x1);
+    double lat2 = GeoUtils.getWorldLat(y2);
+    double lng2 = GeoUtils.getWorldLon(x2);
+
+    var results = runWithReaderFeatures(
+      Map.of("threads", "1"),
+      List.of(
+        newReaderFeature(newLineString(lng1, lat1, lng2, lat2), Map.of(
+          "attr", "value"
+        ))
+      ),
+      (in, features) -> features.line("layer")
+        .setZoomRange(12, 12)
+        .setMinPixelSize(0)
+        .setBufferPixels(4)
+    );
+
+    assertSubmap(Map.of(), results.tiles);
   }
 
   @Test
@@ -551,12 +715,29 @@ class PlanetilerTests {
     return points;
   }
 
+  public List<Coordinate> z14PixelRectangle(double min, double max) {
+    List<Coordinate> points = rectangleCoordList(min / 256d, max / 256d);
+    points.forEach(c -> {
+      c.x = GeoUtils.getWorldLon(0.5 + c.x * Z14_WIDTH);
+      c.y = GeoUtils.getWorldLat(0.5 + c.y * Z14_WIDTH);
+    });
+    return points;
+  }
+
   public List<Coordinate> z14CoordinatePixelList(double... coords) {
     return z14CoordinateList(DoubleStream.of(coords).map(c -> c / 256d).toArray());
   }
 
-  @Test
-  void testPolygonWithHoleSpanningMultipleTiles() throws Exception {
+  public Point z14Point(double x, double y) {
+    return newPoint(
+      GeoUtils.getWorldLon(0.5 + x * Z14_WIDTH / 256),
+      GeoUtils.getWorldLat(0.5 + y * Z14_WIDTH / 256)
+    );
+  }
+
+  @ParameterizedTest
+  @ValueSource(booleans = {false, true})
+  void testPolygonWithHoleSpanningMultipleTiles(boolean anyGeom) throws Exception {
     List<Coordinate> outerPoints = z14CoordinateList(
       0.5, 0.5,
       3.5, 0.5,
@@ -580,7 +761,7 @@ class PlanetilerTests {
           List.of(innerPoints)
         ), Map.of())
       ),
-      (in, features) -> features.polygon("layer")
+      (in, features) -> (anyGeom ? features.anyGeometry("layer") : features.polygon("layer"))
         .setZoomRange(12, 14)
         .setBufferPixels(4)
     );
@@ -643,7 +824,7 @@ class PlanetilerTests {
         ), Map.of())
       )),
       newTileEntry(Z14_TILES / 2 + 2, Z14_TILES / 2 + 1, 14, List.of(
-        feature(newPolygon(tileFill(5), List.of()), Map.of())
+        feature(newPolygon(tileFill(4), List.of()), Map.of())
       )),
       newTileEntry(Z14_TILES / 2 + 3, Z14_TILES / 2 + 1, 14, List.of(
         feature(tileLeft(4), Map.of())
@@ -687,7 +868,7 @@ class PlanetilerTests {
     );
 
     assertEquals(List.of(
-      feature(newPolygon(tileFill(5)), Map.of())
+      feature(newPolygon(tileFill(4)), Map.of())
     ), results.tiles.get(TileCoord.ofXYZ(Z15_TILES / 2, Z15_TILES / 2, 15)));
   }
 
@@ -705,7 +886,7 @@ class PlanetilerTests {
 
     assertEquals(5461, results.tiles.size());
     // spot-check one filled tile
-    assertEquals(List.of(rectangle(-5, 256 + 5).norm()), results.tiles.get(TileCoord.ofXYZ(
+    assertEquals(List.of(rectangle(-4, 256 + 4).norm()), results.tiles.get(TileCoord.ofXYZ(
       Z4_TILES / 2, Z4_TILES / 2, 4
     )).stream().map(d -> d.geometry().geom().norm()).toList());
   }
@@ -733,12 +914,13 @@ class PlanetilerTests {
   @CsvSource({
     "chesapeake.wkb, 4076",
     "mdshore.wkb,    19904",
-    "njshore.wkb,    10571"
+    "njshore.wkb,    10571",
+    "kobroor.wkb,    21693"
   })
   void testComplexShorelinePolygons__TAKES_A_MINUTE_OR_TWO(String fileName, int expected)
     throws Exception {
     LOGGER.warn("Testing complex shoreline processing for " + fileName + " ...");
-    MultiPolygon geometry = (MultiPolygon) new WKBReader()
+    Geometry geometry = new WKBReader()
       .read(new InputStreamInStream(Files.newInputStream(TestUtils.pathToResource(fileName))));
     assertNotNull(geometry);
 
@@ -778,7 +960,7 @@ class PlanetilerTests {
 
     var tileContents = results.tiles.get(TileCoord.ofXYZ(0, 0, 0));
     assertEquals(1, tileContents.size());
-    Geometry geom = tileContents.get(0).geometry().geom();
+    Geometry geom = tileContents.getFirst().geometry().geom();
     assertTrue(geom instanceof MultiPolygon, geom.toString());
     MultiPolygon multiPolygon = (MultiPolygon) geom;
     assertSameNormalizedFeature(newPolygon(
@@ -814,7 +996,7 @@ class PlanetilerTests {
         feature(newPoint(128, 128), Map.of(
           "attr", "value",
           "name", "name value"
-        ))
+        ), 11)
       )
     ), results.tiles);
   }
@@ -903,7 +1085,7 @@ class PlanetilerTests {
         feature(newLineString(128, 128, 192, 192), Map.of(
           "attr", "value",
           "name", "name value"
-        ))
+        ), 32)
       )
     ), results.tiles);
   }
@@ -992,6 +1174,7 @@ class PlanetilerTests {
           rel.members().add(new OsmElement.Relation.Member(OsmElement.Type.WAY, 14, "outer"));
           rel.members().add(new OsmElement.Relation.Member(OsmElement.Type.WAY, 15, null)); // missing
           rel.members().add(new OsmElement.Relation.Member(OsmElement.Type.WAY, 16, "inner")); // incorrect
+          rel.members().add(new OsmElement.Relation.Member(OsmElement.Type.WAY, 14, "outer")); // duplicate
         }),
         with(new OsmElement.Relation(18), rel -> {
           rel.setTag("type", "relation");
@@ -1028,7 +1211,7 @@ class PlanetilerTests {
           "attr", "value",
           "name", "name value",
           "relname", "rel name"
-        ))
+        ), 173)
       )
     ), results.tiles);
   }
@@ -1090,20 +1273,21 @@ class PlanetilerTests {
 
   @Test
   void testPreprocessOsmNodesAndWays() throws Exception {
-    Set<Long> nodes1 = new HashSet<>();
+    HashMap<Long, Long> nodes1 = new HashMap<>();
     Set<Long> nodes2 = new HashSet<>();
     var profile = new Profile.NullProfile() {
       @Override
       public void preprocessOsmNode(OsmElement.Node node) {
         if (node.hasTag("a", "b")) {
-          nodes1.add(node.id());
+          nodes1.put(node.id(), node.id());
         }
       }
 
       @Override
       public void preprocessOsmWay(OsmElement.Way way) {
-        if (nodes1.contains(way.nodes().get(0))) {
-          nodes2.add(way.nodes().get(0));
+        Long featureId = nodes1.get(way.nodes().get(0));
+        if (featureId != null) {
+          nodes2.add(featureId);
         }
       }
 
@@ -1191,8 +1375,9 @@ class PlanetilerTests {
     ), results.tiles);
   }
 
-  @Test
-  void testMergeLineStrings() throws Exception {
+  @ParameterizedTest
+  @ValueSource(booleans = {false, true})
+  void testMergeLineStrings(boolean connectEndpoints) throws Exception {
     double y = 0.5 + Z15_WIDTH / 2;
     double lat = GeoUtils.getWorldLat(y);
 
@@ -1224,7 +1409,9 @@ class PlanetilerTests {
         .setMinZoom(13)
         .setAttrWithMinzoom("z14attr", in.getTag("other"), 14)
         .inheritAttrFromSource("group"),
-      (layer, zoom, items) -> FeatureMerge.mergeLineStrings(items, 0, 0, 0)
+      (layer, zoom, items) -> connectEndpoints ?
+        FeatureMerge.mergeLineStrings(items, 0, 0, 0) :
+        FeatureMerge.mergeMultiLineString(items)
     );
 
     assertSubmap(sortListValues(Map.of(
@@ -1238,10 +1425,65 @@ class PlanetilerTests {
         feature(newLineString(37, 64, 42, 64), Map.of("group", "1", "z14attr", "2")),
         feature(newLineString(42, 64, 47, 64), Map.of("group", "2", "z14attr", "3"))
       ),
-      TileCoord.ofXYZ(Z13_TILES / 2, Z13_TILES / 2, 13), List.of(
+      TileCoord.ofXYZ(Z13_TILES / 2, Z13_TILES / 2, 13), connectEndpoints ? List.of(
         // merge 32->37 and 37->42 since they have same attrs
         feature(newLineString(16, 32, 21, 32), Map.of("group", "1")),
         feature(newLineString(21, 32, 23.5, 32), Map.of("group", "2"))
+      ) : List.of(
+        feature(newMultiLineString(
+          newLineString(16, 32, 18.5, 32),
+          newLineString(18.5, 32, 21, 32)
+        ), Map.of("group", "1")),
+        feature(newLineString(21, 32, 23.5, 32), Map.of("group", "2"))
+      )
+    )), sortListValues(results.tiles));
+  }
+
+  @ParameterizedTest
+  @ValueSource(booleans = {false, true})
+  void postProcessTileFeatures(boolean postProcessLayersToo) throws Exception {
+    double y = 0.5 + Z15_WIDTH / 2;
+    double lat = GeoUtils.getWorldLat(y);
+
+    double x1 = 0.5 + Z15_WIDTH / 4;
+    double lng1 = GeoUtils.getWorldLon(x1);
+    double lng2 = GeoUtils.getWorldLon(x1 + Z15_WIDTH * 10d / 256);
+
+    List<SimpleFeature> features1 = List.of(
+      newReaderFeature(newPoint(lng1, lat), Map.of("from", "a")),
+      newReaderFeature(newPoint(lng2, lat), Map.of("from", "b"))
+    );
+    var testProfile = new Profile.NullProfile() {
+      @Override
+      public void processFeature(SourceFeature sourceFeature, FeatureCollector features) {
+        features.point(sourceFeature.getString("from"))
+          .inheritAttrFromSource("from")
+          .setMinZoom(15);
+      }
+
+      @Override
+      public Map<String, List<VectorTile.Feature>> postProcessTileFeatures(TileCoord tileCoord,
+        Map<String, List<VectorTile.Feature>> layers) {
+        List<VectorTile.Feature> features = new ArrayList<>();
+        features.addAll(layers.get("a"));
+        features.addAll(layers.get("b"));
+        return Map.of("c", features);
+      }
+
+      @Override
+      public List<VectorTile.Feature> postProcessLayerFeatures(String layer, int zoom, List<VectorTile.Feature> items) {
+        return postProcessLayersToo ? items.reversed() : items;
+      }
+    };
+    var results = run(
+      Map.of("threads", "1", "maxzoom", "15"),
+      (featureGroup, profile, config) -> processReaderFeatures(featureGroup, profile, config, features1),
+      testProfile);
+
+    assertSubmap(sortListValues(Map.of(
+      TileCoord.ofXYZ(Z15_TILES / 2, Z15_TILES / 2, 15), List.of(
+        feature(newPoint(64, 128), "c", Map.of("from", "a")),
+        feature(newPoint(74, 128), "c", Map.of("from", "b"))
       )
     )), sortListValues(results.tiles));
   }
@@ -1297,8 +1539,9 @@ class PlanetilerTests {
     )), sortListValues(results.tiles));
   }
 
-  @Test
-  void testMergePolygons() throws Exception {
+  @ParameterizedTest
+  @ValueSource(booleans = {false, true})
+  void testMergePolygons(boolean unionOverlapping) throws Exception {
     var results = runWithReaderFeatures(
       Map.of("threads", "1"),
       List.of(
@@ -1329,19 +1572,97 @@ class PlanetilerTests {
       (in, features) -> features.polygon("layer")
         .setZoomRange(14, 14)
         .inheritAttrFromSource("group"),
-      (layer, zoom, items) -> FeatureMerge.mergeNearbyPolygons(
+      (layer, zoom, items) -> unionOverlapping ? FeatureMerge.mergeNearbyPolygons(
         items,
         0,
         0,
         1,
         1
-      )
+      ) : FeatureMerge.mergeMultiPolygon(items)
+    );
+
+    if (unionOverlapping) {
+      assertSubmap(sortListValues(Map.of(
+        TileCoord.ofXYZ(Z14_TILES / 2, Z14_TILES / 2, 14), List.of(
+          feature(rectangle(10, 10, 30, 20), Map.of("group", "1")),
+          feature(rectangle(10, 20.5, 20, 30), Map.of("group", "2"))
+        )
+      )), sortListValues(results.tiles));
+    } else {
+      assertSubmap(sortListValues(Map.of(
+        TileCoord.ofXYZ(Z14_TILES / 2, Z14_TILES / 2, 14), List.of(
+          feature(
+            newMultiPolygon(
+              rectangle(10, 10, 20, 20),
+              rectangle(20.5, 10, 30, 20)
+            ), Map.of("group", "1")),
+          feature(rectangle(10, 20.5, 20, 30), Map.of("group", "2"))
+        )
+      )), sortListValues(results.tiles));
+    }
+  }
+
+  @Test
+  void testCombineMultiPoint() throws Exception {
+    var results = runWithReaderFeatures(
+      Map.of("threads", "1"),
+      List.of(
+        // merge same group:
+        newReaderFeature(z14Point(0, 0), Map.of("group", "1")),
+        newReaderFeature(newMultiPoint(
+          z14Point(1, 1),
+          z14Point(2, 2)
+        ), Map.of("group", "1")),
+        // don't merge - different group:
+        newReaderFeature(z14Point(3, 3), Map.of("group", "2"))
+      ),
+      (in, features) -> features.point("layer")
+        .setZoomRange(14, 14)
+        .setBufferPixels(0)
+        .inheritAttrFromSource("group"),
+      (layer, zoom, items) -> FeatureMerge.mergeMultiPoint(items)
     );
 
     assertSubmap(sortListValues(Map.of(
       TileCoord.ofXYZ(Z14_TILES / 2, Z14_TILES / 2, 14), List.of(
-        feature(rectangle(10, 10, 30, 20), Map.of("group", "1")),
-        feature(rectangle(10, 20.5, 20, 30), Map.of("group", "2"))
+        feature(newMultiPoint(
+          newPoint(0, 0),
+          newPoint(1, 1),
+          newPoint(2, 2)
+        ), Map.of("group", "1")),
+        feature(newPoint(3, 3), Map.of("group", "2"))
+      )
+    )), sortListValues(results.tiles));
+  }
+
+  @Test
+  void testReduceMaxPointBuffer() throws Exception {
+    var results = runWithReaderFeatures(
+      Map.of(
+        "threads", "1",
+        "max-point-buffer", "1"
+      ),
+      List.of(
+        newReaderFeature(z14Point(0, 0), Map.of("group", "1")),
+        newReaderFeature(newMultiPoint(
+          z14Point(-1, -1),
+          z14Point(-2, -2) // should get filtered out
+        ), Map.of("group", "1")),
+        // don't merge - different group:
+        newReaderFeature(z14Point(257, 257), Map.of("group", "2")),
+        newReaderFeature(z14Point(258, 258), Map.of("group", "3")) // filter out
+      ),
+      (in, features) -> features.point("layer")
+        .setZoomRange(14, 14)
+        .setBufferPixels(10)
+        .inheritAttrFromSource("group")
+    );
+
+    assertSubmap(sortListValues(Map.of(
+      TileCoord.ofXYZ(Z14_TILES / 2, Z14_TILES / 2, 14), List.of(
+        feature(newPoint(-1, -1), Map.of("group", "1")),
+        feature(newPoint(0, 0), Map.of("group", "1")),
+        feature(newPoint(257, 257), Map.of("group", "2"))
       )
     )), sortListValues(results.tiles));
   }
@@ -1532,6 +1853,12 @@ class PlanetilerTests {
       throws GeometryException;
   }
 
+  private interface TilePostprocessFunction {
+
+    Map<String, List<VectorTile.Feature>> process(TileCoord tileCoord, Map<String, List<VectorTile.Feature>> layers)
+      throws GeometryException;
+  }
+
   private record PlanetilerResults(
     Map<TileCoord, List<TestUtils.ComparableFeature>> tiles, Map<String, String> metadata, int tileDataCount
   ) {}
@@ -1543,7 +1870,8 @@ class PlanetilerTests {
     @Override String version,
     BiConsumer<SourceFeature, FeatureCollector> processFeature,
     Function<OsmElement.Relation, List<OsmRelationInfo>> preprocessOsmRelation,
-    LayerPostprocessFunction postprocessLayerFeatures
+    LayerPostprocessFunction postprocessLayerFeatures,
+    TilePostprocessFunction postprocessTileFeatures
   ) implements Profile {
 
     TestProfile(
@@ -1552,8 +1880,16 @@ class PlanetilerTests {
       LayerPostprocessFunction postprocessLayerFeatures
     ) {
       this(TEST_PROFILE_NAME, TEST_PROFILE_DESCRIPTION, TEST_PROFILE_ATTRIBUTION, TEST_PROFILE_VERSION, processFeature,
-        preprocessOsmRelation,
-        postprocessLayerFeatures);
+        preprocessOsmRelation, postprocessLayerFeatures, null);
+    }
+
+    TestProfile(
+      BiConsumer<SourceFeature, FeatureCollector> processFeature,
+      Function<OsmElement.Relation, List<OsmRelationInfo>> preprocessOsmRelation,
+      TilePostprocessFunction postprocessTileFeatures
+    ) {
+      this(TEST_PROFILE_NAME, TEST_PROFILE_DESCRIPTION, TEST_PROFILE_ATTRIBUTION, TEST_PROFILE_VERSION, processFeature,
+        preprocessOsmRelation, null, postprocessTileFeatures);
     }
 
     static TestProfile processSourceFeatures(BiConsumer<SourceFeature, FeatureCollector> processFeature) {
@@ -1563,7 +1899,7 @@ class PlanetilerTests {
     @Override
     public List<OsmRelationInfo> preprocessOsmRelation(
       OsmElement.Relation relation) {
-      return preprocessOsmRelation.apply(relation);
+      return preprocessOsmRelation == null ? null : preprocessOsmRelation.apply(relation);
     }
 
     @Override
@@ -1577,7 +1913,13 @@ class PlanetilerTests {
     @Override
     public List<VectorTile.Feature> postProcessLayerFeatures(String layer, int zoom,
       List<VectorTile.Feature> items) throws GeometryException {
-      return postprocessLayerFeatures.process(layer, zoom, items);
+      return postprocessLayerFeatures == null ? null : postprocessLayerFeatures.process(layer, zoom, items);
+    }
+
+    @Override
+    public Map<String, List<VectorTile.Feature>> postProcessTileFeatures(TileCoord tileCoord,
+      Map<String, List<VectorTile.Feature>> layers) throws GeometryException {
+      return postprocessTileFeatures == null ? null : postprocessTileFeatures.process(tileCoord, layers);
     }
   }
 
@@ -1589,9 +1931,31 @@ class PlanetilerTests {
   void testBadRelation() throws Exception {
     // this threw an exception in OsmMultipolygon.build
     OsmXml osmInfo = TestUtils.readOsmXml("bad_spain_relation.xml");
+    List<OsmElement> elements = convertToOsmElements(osmInfo);
+
+    var results = runWithOsmElements(
+      Map.of("threads", "1"),
+      elements,
+      (in, features) -> {
+        if (in.hasTag("landuse", "forest")) {
+          features.polygon("layer")
+            .setZoomRange(12, 14)
+            .setBufferPixels(4);
+        }
+      }
+    );
+
+    assertEquals(11, results.tiles.size());
+  }
+
+  private static List<OsmElement> convertToOsmElements(OsmXml osmInfo) {
     List<OsmElement> elements = new ArrayList<>();
     for (var node : orEmpty(osmInfo.nodes())) {
-      elements.add(new OsmElement.Node(node.id(), node.lat(), node.lon()));
+      var newNode = new OsmElement.Node(node.id(), node.lat(), node.lon());
+      elements.add(newNode);
+      for (var tag : orEmpty(node.tags())) {
+        newNode.setTag(tag.k(), tag.v());
+      }
     }
     for (var way : orEmpty(osmInfo.ways())) {
       var readerWay = new OsmElement.Way(way.id());
@@ -1618,34 +1982,200 @@ class PlanetilerTests {
         }, member.ref(), member.role()));
       }
     }
+    return elements;
+  }
+
+  @Test
+  void testIssue496BaseballMultipolygon() throws Exception {
+    // this generated a polygon that covered an entire z11 tile where the buffer intersected the baseball field
+    OsmXml osmInfo = TestUtils.readOsmXml("issue_496_baseball_multipolygon.xml");
+    List<OsmElement> elements = convertToOsmElements(osmInfo);
 
     var results = runWithOsmElements(
       Map.of("threads", "1"),
       elements,
       (in, features) -> {
-        if (in.hasTag("landuse", "forest")) {
-          features.polygon("layer")
-            .setZoomRange(12, 14)
-            .setBufferPixels(4);
+        if (in.hasTag("natural", "sand")) {
+          features.polygon("test")
+            .setBufferPixels(4)
+            .setPixelTolerance(0.5)
+            .setMinPixelSize(0.1)
+            .setAttr("id", in.id());
         }
       }
     );
 
-    assertEquals(11, results.tiles.size());
+    double areaAtZ14 = 20;
+
+    for (var entry : results.tiles().entrySet()) {
+      var tile = entry.getKey();
+      for (var feature : entry.getValue()) {
+        var geom = feature.geometry().geom();
+        double area = geom.getArea();
+        double expectedMaxArea = areaAtZ14 / (1 << (14 - tile.z()));
+        assertTrue(area < expectedMaxArea, "tile=" + tile + " area=" + area + " geom=" + geom);
+      }
+    }
+
+    assertEquals(8, results.tiles.size());
+  }
+
+  @Test
+  void testIssue509LenaDelta() throws Exception {
+    OsmXml osmInfo = TestUtils.readOsmXml("issue_509_lena_delta.xml");
+    List<OsmElement> elements = convertToOsmElements(osmInfo);
+
+    var results = runWithOsmElements(
+      Map.of("threads", "1"),
+      elements,
+      (in, features) -> {
+        if (in.hasTag("natural", "water")) {
+          features.polygon("water").setAttr("id", in.id()).setMinZoom(10);
+        }
+      }
+    );
+
+    Map<Integer, Integer> counts = new TreeMap<>();
+    for (var tile : results.tiles().keySet()) {
+      counts.merge(tile.z(), 1, Integer::sum);
+    }
+
+    assertEquals(Map.of(
+      10, 39,
+      11, 125,
+      12, 397,
+      13, 1160,
+      14, 3108
+    ), counts);
+  }
+
+  @Test
+  void testIssue546Terschelling() throws Exception {
+    Geometry geometry = new WKBReader()
+      .read(
+        new InputStreamInStream(Files.newInputStream(TestUtils.pathToResource("issue_546_terschelling.wkb"))));
+    geometry = GeoUtils.worldToLatLonCoords(geometry);
+
+    assertNotNull(geometry);
+
+    // automatically checks for self-intersections
+    var results = runWithReaderFeatures(
+      Map.of("threads", "1"),
+      List.of(
+        newReaderFeature(geometry, Map.of())
+      ),
+      (in, features) -> features.polygon("ocean")
+        .setBufferPixels(4.0)
+        .setMinZoom(0)
+    );
+
+
+    // this lat/lon is in the middle of an island and should not be covered by
+    for (int z = 4; z <= 14; z++) {
+      double lat = 53.391958;
+      double lon = 5.2438441;
+
+      var coord = TileCoord.aroundLngLat(lon, lat, z);
+      var problematicTile = results.tiles.get(coord);
+      if (z == 14) {
+        assertNull(problematicTile);
+        continue;
+      }
+      double scale = Math.pow(2, coord.z());
+
+      double tileX = (GeoUtils.getWorldX(lon) * scale - coord.x()) * 256;
+      double tileY = (GeoUtils.getWorldY(lat) * scale - coord.y()) * 256;
+
+      var point = newPoint(tileX, tileY);
+
+      assertEquals(1, problematicTile.size());
+      var geomCompare = problematicTile.getFirst().geometry();
+      geomCompare.validate();
+      var geom = geomCompare.geom();
+
+      assertFalse(geom.covers(point), "z" + z);
+    }
+  }
+
+  private static TileArchiveConfig.Format extractFormat(String args) {
+
+    final Optional<TileArchiveConfig.Format> format = Stream.of(TileArchiveConfig.Format.values())
+      .filter(fmt -> args.contains("--output-format=" + fmt.id()))
+      .findFirst();
+
+    if (format.isPresent()) {
+      return format.get();
+    } else if (args.contains("--output-format=")) {
+      throw new IllegalArgumentException("unhandled output format");
+    } else {
+      return TileArchiveConfig.Format.MBTILES;
+    }
+  }
+
+  private static TileCompression extractTileCompression(String args) {
+    if (args.contains("tile-compression=none")) {
+      return TileCompression.NONE;
+    } else if (args.contains("tile-compression=gzip")) {
+      return TileCompression.GZIP;
+    } else if (args.contains("tile-compression=")) {
+      throw new IllegalArgumentException("unhandled tile compression");
+    } else {
+      return TileCompression.GZIP;
+    }
   }
 
   @ParameterizedTest
   @ValueSource(strings = {
     "",
     "--write-threads=2 --process-threads=2 --feature-read-threads=2 --threads=4",
-    "--emit-tiles-in-order=false",
     "--free-osm-after-read",
+    "--compress-temp",
     "--osm-parse-node-bounds",
+    "--output-format=pmtiles",
+    "--output-format=csv",
+    "--output-format=tsv",
+    "--output-format=proto",
+    "--output-format=pbf",
+    "--output-format=json",
+    "--output-format=files",
+    "--tile-compression=none",
+    "--tile-compression=gzip",
+    "--output-layerstats",
+    "--max-point-buffer=1",
+    "--osm-test-path=monaco-latest.lz4.osm.pbf",
   })
   void testPlanetilerRunner(String args) throws Exception {
-    Path originalOsm = TestUtils.pathToResource("monaco-latest.osm.pbf");
-    Path mbtiles = tempDir.resolve("output.mbtiles");
+    var argParsed = Arguments.fromArgs(args.split(" "));
+    Path originalOsm =
+      TestUtils.pathToResource(argParsed.getString("osm-test-path", "osm-test-path", "monaco-latest.osm.pbf"));
     Path tempOsm = tempDir.resolve("monaco-temp.osm.pbf");
+    final TileCompression tileCompression = extractTileCompression(args);
+
+    final TileArchiveConfig.Format format = extractFormat(args);
+    final String outputUri;
+    final Path outputPath;
+    switch (format) {
+      case FILES -> {
+        outputPath = tempDir.resolve("output");
+        outputUri = outputPath.toString() + "?format=files";
+      }
+      default -> {
+        outputPath = tempDir.resolve("output." + format.id());
+        outputUri = outputPath.toString();
+      }
+    }
+
+    final ReadableTileArchiveFactory readableTileArchiveFactory = switch (format) {
+      case MBTILES -> Mbtiles::newReadOnlyDatabase;
+      case CSV -> p -> InMemoryStreamArchive.fromCsv(p, ",");
+      case TSV -> p -> InMemoryStreamArchive.fromCsv(p, "\t");
+      case JSON -> InMemoryStreamArchive::fromJson;
+      case PMTILES -> ReadablePmtiles::newReadFromFile;
+      case PROTO, PBF -> InMemoryStreamArchive::fromProtobuf;
+      case FILES -> p -> ReadableFilesArchive.newReader(p, Arguments.of());
+    };
+
+
     Files.copy(originalOsm, tempOsm);
     Planetiler.create(Arguments.fromArgs(
       ("--tmpdir=" + tempDir.resolve("data") + " " + args).split("\\s+")
@@ -1655,13 +2185,16 @@ class PlanetilerTests {
         public void processFeature(SourceFeature source, FeatureCollector features) {
           if (source.canBePolygon() && source.hasTag("building", "yes")) {
             features.polygon("building").setZoomRange(0, 14).setMinPixelSize(1);
+          } else if (source.isPoint() && source.hasTag("place")) {
+            features.point("place").setZoomRange(0, 14);
           }
         }
       })
       .addOsmSource("osm", tempOsm)
       .addNaturalEarthSource("ne", TestUtils.pathToResource("natural_earth_vector.sqlite"))
       .addShapefileSource("shapefile", TestUtils.pathToResource("shapefile.zip"))
-      .setOutput("mbtiles", mbtiles)
+      .addGeoPackageSource("geopackage", TestUtils.pathToResource("geopackage.gpkg.zip"), null)
+      .setOutput(outputUri)
       .run();
 
     // make sure it got deleted after write
@@ -1669,9 +2202,9 @@ class PlanetilerTests {
       assertFalse(Files.exists(tempOsm));
     }
 
-    try (Mbtiles db = Mbtiles.newReadOnlyDatabase(mbtiles)) {
+    try (var db = readableTileArchiveFactory.create(outputPath)) {
       int features = 0;
-      var tileMap = TestUtils.getTileMap(db);
+      var tileMap = TestUtils.getTileMap(db, tileCompression);
       for (var tile : tileMap.values()) {
         for (var feature : tile) {
           feature.geometry().validate();
@@ -1679,8 +2212,208 @@ class PlanetilerTests {
         }
       }
 
-      assertEquals(11, tileMap.size(), "num tiles");
-      assertEquals(2146, features, "num buildings");
+      int expectedFeatures = args.contains("max-point-buffer=1") ? 2311 : 2313;
+
+      assertEquals(22, tileMap.size(), "num tiles");
+      assertEquals(expectedFeatures, features, "num feature");
+
+      final boolean checkMetadata = switch (format) {
+        case MBTILES -> true;
+        case PMTILES -> true;
+        default -> db.metadata() != null;
+      };
+
+      if (checkMetadata) {
+        assertSubmap(Map.of(
+          "planetiler:version", BuildInfo.get().version(),
+          "planetiler:osm:osmosisreplicationtime", "2021-04-21T20:21:46Z",
+          "planetiler:osm:osmosisreplicationseq", "2947",
+          "planetiler:osm:osmosisreplicationurl", "http://download.geofabrik.de/europe/monaco-updates"
+        ), db.metadata().toMap());
+      }
+    }
+
+    final Path layerstats = outputPath.resolveSibling(outputPath.getFileName().toString() + ".layerstats.tsv.gz");
+    if (args.contains("--output-layerstats")) {
+      assertTrue(Files.exists(layerstats));
+      byte[] data = Files.readAllBytes(layerstats);
+      byte[] uncompressed = Gzip.gunzip(data);
+      String[] lines = new String(uncompressed, StandardCharsets.UTF_8).split("\n");
+      assertEquals(33, lines.length);
+
+      assertEquals(List.of(
+        "z",
+        "x",
+        "y",
+        "hilbert",
+        "archived_tile_bytes",
+        "layer",
+        "layer_bytes",
+        "layer_features",
+        "layer_geometries",
+        "layer_attr_bytes",
+        "layer_attr_keys",
+        "layer_attr_values"
+      ), List.of(lines[0].split("\t")), lines[0]);
+
+      var mapper = new CsvMapper();
+      var reader = mapper
+        .readerFor(Map.class)
+        .with(CsvSchema.emptySchema().withColumnSeparator('\t').withLineSeparator("\n").withHeader());
+      try (var items = reader.readValues(uncompressed)) {
+        while (items.hasNext()) {
+          @SuppressWarnings("unchecked") Map<String, String> next = (Map<String, String>) items.next();
+          int z = Integer.parseInt(next.get("z"));
+          int x = Integer.parseInt(next.get("x"));
+          int y = Integer.parseInt(next.get("y"));
+          int hilbert = Integer.parseInt(next.get("hilbert"));
+          assertEquals(hilbert, TileCoord.ofXYZ(x, y, z).hilbertEncoded());
+          assertTrue(Integer.parseInt(next.get("z")) <= 14, "bad z: " + next);
+        }
+      }
+
+      // ensure tilestats standalone executable produces same output
+      var standaloneLayerstatsOutput = tempDir.resolve("layerstats2.tsv.gz");
+      TileSizeStats.main("--input=" + outputPath, "--output=" + standaloneLayerstatsOutput);
+      byte[] standaloneData = Files.readAllBytes(standaloneLayerstatsOutput);
+      byte[] standaloneUncompressed = Gzip.gunzip(standaloneData);
+      assertEquals(
+        new String(uncompressed, StandardCharsets.UTF_8),
+        new String(standaloneUncompressed, StandardCharsets.UTF_8)
+      );
+    } else {
+      assertFalse(Files.exists(layerstats));
+    }
+  }
+
+  @Test
+  void testPlanetilerRunnerShapefile() throws Exception {
+    Path mbtiles = tempDir.resolve("output.mbtiles");
+    Path resourceDir = TestUtils.pathToResource("");
+
+    Planetiler.create(Arguments.fromArgs("--tmpdir=" + tempDir.resolve("data")))
+      .setProfile(new Profile.NullProfile() {
+        @Override
+        public void processFeature(SourceFeature source, FeatureCollector features) {
+          features.point("stations")
+            .setZoomRange(0, 14)
+            .setAttr("source", source.getSource())
+            .setAttr("layer", source.getSourceLayer());
+        }
+      })
+      // Match *.shp within [shapefile.zip, shapefile-copy.zip]
+      .addShapefileGlobSource("shapefile-glob", resourceDir, "shape*.zip")
+      // Match *.shp within shapefile.zip
+      .addShapefileGlobSource("shapefile-glob-zip", resourceDir.resolve("shapefile.zip"), "*.shp")
+      // Match *.shp within shapefile.zip
+      .addShapefileSource("shapefile", resourceDir.resolve("shapefile.zip"))
+      .setOutput(mbtiles)
+      .run();
+
+    try (Mbtiles db = Mbtiles.newReadOnlyDatabase(mbtiles)) {
+      long fileCount = 0, globCount = 0, globZipCount = 0;
+      var tileMap = TestUtils.getTileMap(db);
+      for (var tile : tileMap.values()) {
+        for (var feature : tile) {
+          feature.geometry().validate();
+          assertEquals("stations", feature.attrs().get("layer"));
+          switch ((String) feature.attrs().get("source")) {
+            case "shapefile" -> fileCount++;
+            case "shapefile-glob" -> globCount++;
+            case "shapefile-glob-zip" -> globZipCount++;
+          }
+        }
+      }
+
+      assertTrue(fileCount > 0);
+      // `shapefile` and `shapefile-glob-zip` both match only one file.
+      assertEquals(fileCount, globZipCount);
+      // `shapefile-glob` matches two input files, should have 2x number of features of `shapefile`.
+      assertEquals(2 * fileCount, globCount);
+    }
+  }
+
+  @ParameterizedTest
+  @ValueSource(strings = {
+    "",
+    "--write-threads=2 --process-threads=2 --feature-read-threads=2 --threads=4",
+    "--input-file=geopackage.gpkg"
+  })
+  void testPlanetilerRunnerGeoPackage(String args) throws Exception {
+    Path mbtiles = tempDir.resolve("output.mbtiles");
+    String inputFile = Arguments.fromArgs(args).getString("input-file", "", "geopackage.gpkg.zip");
+
+    Planetiler.create(Arguments.fromArgs((args + " --tmpdir=" + tempDir.resolve("data")).split("\\s+")))
+      .setProfile(new Profile.NullProfile() {
+        @Override
+        public void processFeature(SourceFeature source, FeatureCollector features) {
+          features.point("stations")
+            .setZoomRange(0, 14)
+            .setAttr("name", source.getString("name"));
+        }
+      })
+      .addGeoPackageSource("geopackage", TestUtils.pathToResource(inputFile), null)
+      .setOutput(mbtiles)
+      .run();
+
+    try (Mbtiles db = Mbtiles.newReadOnlyDatabase(mbtiles)) {
+      Set<String> uniqueNames = new HashSet<>();
+      long featureCount = 0;
+      var tileMap = TestUtils.getTileMap(db);
+      for (var tile : tileMap.values()) {
+        for (var feature : tile) {
+          feature.geometry().validate();
+          featureCount++;
+          uniqueNames.add((String) feature.attrs().get("name"));
+        }
+      }
+
+      assertTrue(featureCount > 0);
+      assertEquals(86, uniqueNames.size());
+      assertTrue(uniqueNames.contains("Van Dörn Street"));
+    }
+  }
+
+  @ParameterizedTest
+  @ValueSource(strings = {
+    "",
+    "--write-threads=2 --process-threads=2 --feature-read-threads=2 --threads=4"
+  })
+  void testPlanetilerRunnerParquet(String args) throws Exception {
+    Path mbtiles = tempDir.resolve("output.mbtiles");
+
+    Planetiler.create(Arguments.fromArgs((args + " --tmpdir=" + tempDir.resolve("data")).split("\\s+")))
+      .setProfile(new Profile.NullProfile() {
+        @Override
+        public void processFeature(SourceFeature source, FeatureCollector features) {
+          features.polygon("buildings")
+            .setZoomRange(0, 14)
+            .setMinPixelSize(0)
+            .setAttr("id", source.getString("id"));
+        }
+      })
+      .addParquetSource("parquet", List.of(TestUtils.pathToResource("parquet").resolve("boston.parquet")))
+      .setOutput(mbtiles)
+      .run();
+
+    try (Mbtiles db = Mbtiles.newReadOnlyDatabase(mbtiles)) {
+      Set<String> uniqueIds = new HashSet<>();
+      long featureCount = 0;
+      var tileMap = TestUtils.getTileMap(db);
+      for (int z = 14; z >= 11; z--) {
+        var coord = TileCoord.aroundLngLat(-71.07448, 42.35626, z);
+        assertTrue(tileMap.containsKey(coord), "contain " + coord);
+      }
+      for (var tile : tileMap.values()) {
+        for (var feature : tile) {
+          feature.geometry().validate();
+          featureCount++;
+          uniqueIds.add((String) feature.attrs().get("id"));
+        }
+      }
+
+      assertTrue(featureCount > 0);
+      assertEquals(3, uniqueIds.size());
     }
   }
 
@@ -1690,7 +2423,8 @@ class PlanetilerTests {
       .addOsmSource("osm", TestUtils.pathToResource("monaco-latest.osm.pbf"))
       .addNaturalEarthSource("ne", TestUtils.pathToResource("natural_earth_vector.sqlite"))
       .addShapefileSource("shapefile", TestUtils.pathToResource("shapefile.zip"))
-      .setOutput("mbtiles", tempDir.resolve("output.mbtiles"))
+      .addGeoPackageSource("geopackage", TestUtils.pathToResource("geopackage.gpkg.zip"), null)
+      .setOutput(tempDir.resolve("output.mbtiles"))
       .run();
   }
 
@@ -1765,15 +2499,14 @@ class PlanetilerTests {
 
 
   private PlanetilerResults runForCompactTest(boolean compactDbEnabled) throws Exception {
-
     return runWithReaderFeatures(
-      Map.of("threads", "1", "compact-db", Boolean.toString(compactDbEnabled)),
+      Map.of("threads", "1", "mbtiles-compact", Boolean.toString(compactDbEnabled)),
       List.of(
         newReaderFeature(WORLD_POLYGON, Map.of())
       ),
       (in, features) -> features.polygon("layer")
         .setZoomRange(0, 2)
-        .setBufferPixels(0)
+        .setBufferPixels(1)
     );
   }
 
@@ -1873,6 +2606,165 @@ class PlanetilerTests {
     assertEquals(bboxResult.tiles, polyResult.tiles);
   }
 
+  @ParameterizedTest
+  @CsvSource({
+    "RETAIN_IMPORTANT_POINTS",
+    "RETAIN_EFFECTIVE_AREAS",
+    "RETAIN_WEIGHTED_EFFECTIVE_AREAS",
+  })
+  void testSimplePolygon(SimplifyMethod strategy) throws Exception {
+    List<Coordinate> points = z14PixelRectangle(0, 40);
+
+    var results = runWithReaderFeatures(
+      Map.of("threads", "1"),
+      List.of(
+        newReaderFeature(newPolygon(points), Map.of())
+      ),
+      (in, features) -> features.polygon("layer")
+        .setZoomRange(0, 14)
+        .setBufferPixels(0)
+        .setPixelTolerance(1)
+        .setSimplifyMethod(strategy)
+        .setMinPixelSize(10) // should only show up z14 (40) z13 (20) and z12 (10)
+    );
+
+    assertEquals(Map.ofEntries(
+      newTileEntry(Z12_TILES / 2, Z12_TILES / 2, 12, List.of(
+        feature(newPolygon(rectangleCoordList(0, 10)), Map.of())
+      )),
+      newTileEntry(Z13_TILES / 2, Z13_TILES / 2, 13, List.of(
+        feature(newPolygon(rectangleCoordList(0, 20)), Map.of())
+      )),
+      newTileEntry(Z14_TILES / 2, Z14_TILES / 2, 14, List.of(
+        feature(newPolygon(rectangleCoordList(0, 40)), Map.of())
+      ))
+    ), results.tiles);
+  }
+
+  @Test
+  void testCentroidWithPolygonMinSize() throws Exception {
+    List<Coordinate> points = z14PixelRectangle(0, 40);
+
+    var results = runWithReaderFeatures(
+      Map.of("threads", "1"),
+      List.of(
+        newReaderFeature(newPolygon(points), Map.of())
+      ),
+      (in, features) -> features.centroid("layer")
+        .setZoomRange(0, 14)
+        .setBufferPixels(0)
+        .setMinPixelSize(10) // should only show up z14 (40) z13 (20) and z12 (10)
+    );
+
+    assertEquals(Map.ofEntries(
+      newTileEntry(Z12_TILES / 2, Z12_TILES / 2, 12, List.of(
+        feature(newPoint(5, 5), Map.of())
+      )),
+      newTileEntry(Z13_TILES / 2, Z13_TILES / 2, 13, List.of(
+        feature(newPoint(10, 10), Map.of())
+      )),
+      newTileEntry(Z14_TILES / 2, Z14_TILES / 2, 14, List.of(
+        feature(newPoint(20, 20), Map.of())
+      ))
+    ), results.tiles);
+  }
+
+  @Test
+  void testCentroidWithLineMinSize() throws Exception {
+    List<Coordinate> points = z14CoordinatePixelList(0, 4, 40, 4);
+
+    var results = runWithReaderFeatures(
+      Map.of("threads", "1"),
+      List.of(
+        newReaderFeature(newLineString(points), Map.of())
+      ),
+      (in, features) -> features.centroid("layer")
+        .setZoomRange(0, 14)
+        .setBufferPixels(0)
+        .setMinPixelSize(10) // should only show up z14 (40) z13 (20) and z12 (10)
+    );
+
+    assertEquals(Map.ofEntries(
+      newTileEntry(Z12_TILES / 2, Z12_TILES / 2, 12, List.of(
+        feature(newPoint(5, 1), Map.of())
+      )),
+      newTileEntry(Z13_TILES / 2, Z13_TILES / 2, 13, List.of(
+        feature(newPoint(10, 2), Map.of())
+      )),
+      newTileEntry(Z14_TILES / 2, Z14_TILES / 2, 14, List.of(
+        feature(newPoint(20, 4), Map.of())
+      ))
+    ), results.tiles);
+  }
+
+  @Test
+  void testAttributeMinSizeLine() throws Exception {
+    List<Coordinate> points = z14CoordinatePixelList(0, 4, 40, 4);
+
+    var results = runWithReaderFeatures(
+      Map.of("threads", "1"),
+      List.of(
+        newReaderFeature(newLineString(points), Map.of())
+      ),
+      (in, features) -> features.line("layer")
+        .setZoomRange(11, 14)
+        .setBufferPixels(0)
+        .setAttrWithMinSize("a", "1", 10)
+        .setAttrWithMinSize("b", "2", 20)
+        .setAttrWithMinSize("c", "3", 40)
+        .setAttrWithMinSize("d", "4", 40, 0, 13) // should show up at z13 and above
+    );
+
+    assertEquals(Map.ofEntries(
+      newTileEntry(Z11_TILES / 2, Z11_TILES / 2, 11, List.of(
+        feature(newLineString(0, 0.5, 5, 0.5), Map.of())
+      )),
+      newTileEntry(Z12_TILES / 2, Z12_TILES / 2, 12, List.of(
+        feature(newLineString(0, 1, 10, 1), Map.of("a", "1"))
+      )),
+      newTileEntry(Z13_TILES / 2, Z13_TILES / 2, 13, List.of(
+        feature(newLineString(0, 2, 20, 2), Map.of("a", "1", "b", "2", "d", "4"))
+      )),
+      newTileEntry(Z14_TILES / 2, Z14_TILES / 2, 14, List.of(
+        feature(newLineString(0, 4, 40, 4), Map.of("a", "1", "b", "2", "c", "3", "d", "4"))
+      ))
+    ), results.tiles);
+  }
+
+  @Test
+  void testAttributeMinSizePoint() throws Exception {
+    List<Coordinate> points = z14CoordinatePixelList(0, 4, 40, 4);
+
+    var results = runWithReaderFeatures(
+      Map.of("threads", "1"),
+      List.of(
+        newReaderFeature(newLineString(points), Map.of())
+      ),
+      (in, features) -> features.centroid("layer")
+        .setZoomRange(11, 14)
+        .setBufferPixels(0)
+        .setAttrWithMinSize("a", "1", 10)
+        .setAttrWithMinSize("b", "2", 20)
+        .setAttrWithMinSize("c", "3", 40)
+        .setAttrWithMinSize("d", "4", 40, 0, 13) // should show up at z13 and above
+    );
+
+    assertEquals(Map.ofEntries(
+      newTileEntry(Z11_TILES / 2, Z11_TILES / 2, 11, List.of(
+        feature(newPoint(2.5, 0.5), Map.of())
+      )),
+      newTileEntry(Z12_TILES / 2, Z12_TILES / 2, 12, List.of(
+        feature(newPoint(5, 1), Map.of("a", "1"))
+      )),
+      newTileEntry(Z13_TILES / 2, Z13_TILES / 2, 13, List.of(
+        feature(newPoint(10, 2), Map.of("a", "1", "b", "2", "d", "4"))
+      )),
+      newTileEntry(Z14_TILES / 2, Z14_TILES / 2, 14, List.of(
+        feature(newPoint(20, 4), Map.of("a", "1", "b", "2", "c", "3", "d", "4"))
+      ))
+    ), results.tiles);
+  }
+
   @Test
   void testBoundFiltersFill() throws Exception {
     var polyResultz8 = runForBoundsTest(8, 8, "polygon", TestUtils.pathToResource("bottomrightearth.poly").toString());
@@ -1880,5 +2772,21 @@ class PlanetilerTests {
     int z8tiles = 1 << 8;
     assertFalse(polyResultz8.tiles.containsKey(TileCoord.ofXYZ(z8tiles * 3 / 4, z8tiles * 5 / 8, 8)));
     assertTrue(polyResultz8.tiles.containsKey(TileCoord.ofXYZ(z8tiles * 3 / 4, z8tiles * 7 / 8, 8)));
+  }
+
+  @Test
+  void testDefaultLanguages() {
+    var planetiler = Planetiler.create(Arguments.of("languages", "default,en"))
+      .setDefaultLanguages(List.of("jbo", "tlh"));
+    var translations = planetiler.translations();
+    assertTrue(translations.careAboutLanguage("jbo"));
+    assertTrue(translations.careAboutLanguage("tlh"));
+    assertTrue(translations.careAboutLanguage("en"));
+    assertFalse(translations.careAboutLanguage("fr"));
+  }
+
+  @FunctionalInterface
+  private interface ReadableTileArchiveFactory {
+    ReadableTileArchive create(Path p) throws IOException;
   }
 }
